# wiktionary-de-parser

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  LICENSE.txt  MANIFEST.in  README.md  __init__.py  notebook.ipynb  pyproject.toml  setup.py  test.py
methods/: flexion.py  get_syllables.py  ipa.py  language.py  lemma.py  part_of_speech.py  pos.py  syllables.py
notebooks/: meanings.ipynb  process_chunk.py  test_run.ipynb
test/methods/: flexion_tables.py  test_flexion.py  test_hyphenation.py  test_ipa.py  test_language.py  test_lemma.py  test_pos.py  test_rhymes.py  test_syllables.py
test/test_data/: flexion_tables.py  hyphenation_data.py  ipa_data.py  language_data.py  lemma_data.py  pos_data.py  rhymes_test_data.py  syllables_data.py
wiktionary_de_parser/: __init__.py  config.py  helper.py  models.py  run.py  test.py
wiktionary_de_parser/assets/: sprachcodes_iso639-1.txt
wiktionary_de_parser/dump_processor/: __init__.py  dump_page.py
wiktionary_de_parser/methods/: flexion.py  ipa.py  language.py  lemma.py  meanings.py  pos.py  syllables.py
wiktionary_de_parser/parser/: __init__.py  parse_flexion.py  parse_hyphenation.py  parse_ipa.py  parse_language.py  parse_lemma.py  parse_meanings.py  parse_pos.py  parse_rhymes.py  parse_syllables.py
wiktionary_de_parser/utils/meanings/: tags.py  template_parser.py  wiki_list.py
