[tool.poetry]
name = "wiktionary-de-parser"
version = "0.9.0"
description = "Extracts data from German Wiktionary dump files. Allows you to add your own extraction methods 🚀"
authors = ["Gregor Weichbrodt <gregorweichbrodt@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/gambolputty/wiktionary-de-parser"
repository = "https://github.com/gambolputty/wiktionary-de-parser"
keywords = ["wiktionary", "xml", "parser", "data-extraction", "german", "nlp"]
classifiers = [
    "Programming Language :: Python :: 3.7",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Natural Language :: German",
    "Topic :: Text Processing :: Markup :: XML"
]
include = [
    "CHANGELOG.md",
    "LICENSE.txt",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/gambolputty/wiktionary-de-parser/issues"

[tool.poetry.dependencies]
python = "^3.7"
lxml = "^4.9.1"
mwparserfromhell = "^0.6.4"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"